--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           saying about our services.</p>
       </div>
       <div class="social__reviews">
-        <div class="social__reviews social__reviews--first">
+        <div class="social__review social__review--first">
           <div class="reviews__stars">
             <img src="images/icon-star.svg" alt="star icon">
             <img src="images/icon-star.svg" alt="star icon">
@@ -32,7 +32,7 @@
           </div>
           <h2 class="reviews__subtitle">Rated 5 Stars in Reviews</h2>
         </div>
-        <div class="social__reviews social__reviews--second">
+        <div class="social__review social__review--second">
           <div class="reviews__stars">
             <img src="images/icon-star.svg" alt="star icon">
             <img src="images/icon-star.svg" alt="star icon">
@@ -42,7 +42,7 @@
           </div>
           <h2 class="reviews__subtitle">Rated 5 Stars in Report Guru</h2>
         </div>
-        <div class="social__reviews social__reviews--third">
+        <div class="social__review social__review--third">
           <div class="reviews__stars">
             <img src="images/icon-star.svg" alt="star icon">
             <img src="images/icon-star.svg" alt="star icon">
@@ -60,7 +60,7 @@
           <img class="profile__colton--avatar" src="images/image-colton.jpg">
           <div class="profile__colton--data">
             <h2>Colton Smith</h2>
-            <h2>Verified Buyer</h2>
+            <h3>Verified Buyer</h>
           </div>
         </div>
         <p class="profile__colton--text">
@@ -74,7 +74,7 @@
           <img class="profile__irene--avatar" src="images/image-irene.jpg">
           <div class="profile__irene--data">
             <h2>Irene Roberts</h2>
-            <h2>Verified Buyer</h2>
+            <h3>Verified Buyer</h3>
           </div>
         </div>
         <p class="profile__irene--text">"Customer service is always excellent and very quick turn around.Completely
@@ -87,7 +87,7 @@
           <img id="avatar" src="images/image-anne.jpg">
           <div class="profile__anne--data">
             <h2>Anne Wallace</h2>
-            <h2>Verified Buyer</h2>
+            <h3>Verified Buyer</h3>
           </div>
         </div>
         <p class="profile__anne--text">"Put an order with this company and can only praise them for the very high
